--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -324,7 +324,12 @@
             <div class="col-md-12">
               <deletediscount-card></deletediscount-card>
             </div>
-          </section>   
+          </section>
+          <section data-category="user-creation-card">
+            <div class="col-md-12">
+              <user-creation-card></user-creation-card>
+            </div>
+          </section>     
           </iron-pages>
           </div>
           </div>
