--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -284,3 +284,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="proof-update-card/proof-update-card.html">
 <link rel="import" href="deletediscount-card/deletediscount-card.html">
 <link rel="import" href="deletediscount-item-card/deletediscount-item-card.html">
+<link rel="import" href="user-creation-card/user-creation-card.html">
+<link rel="import" href="user-service/user-service.html">
