--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -329,7 +329,12 @@
             <div class="col-md-12">
               <user-creation-card></user-creation-card>
             </div>
-          </section>     
+          </section> 
+          <section data-category="role-menu-mapping-card">
+            <div class="col-md-12">
+              <role-menu-mapping-card></role-menu-mapping-card>
+            </div>
+          </section>    
           </iron-pages>
           </div>
           </div>
