--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -286,3 +286,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="deletediscount-item-card/deletediscount-item-card.html">
 <link rel="import" href="user-creation-card/user-creation-card.html">
 <link rel="import" href="user-service/user-service.html">
+<link rel="import" href="role-menu-mapping-card/role-menu-mapping-card.html">
+<link rel="import" href="mainmenu-card/mainmenu-card.html">
+<link rel="import" href="submenu-card/submenu-card.html">
